# developer-documentation

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .workflow-patcher.yml  README.md  debug_python_toolbox.py  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/: exasol-explore.md  exasol-implement.md  exasol-modify.md  exasol-new.md
.github/workflows/: cd.yml  checks.yml  ci.yml  fast-tests.yml  gh-pages.yml  report.yml  slow-checks.yml
doc/: conf.py  data_ingestion.rst  data_science.rst  dbt.rst  environments.rst  faq.rst  getting_started.rst  how_edit_this_docu.rst  index.rst  integrations.rst  mcp_server.rst  sqlglot.rst
doc/UDF/: index.rst  intro.rst
doc/changes/: changelog.md  unreleased.md
doc/connect_to_exasol/: connection.rst  first-querry.rst  index.rst  installation.rst  overview.rst
doc/data_science/: ai_lab.rst  index.rst
doc/data_science/ai_architecture/: bfs.rst  index.rst  parallel_processing.rst  slc.rst  udf.rst
doc/distributed_python/: advanced.rst  debugging.rst  index.rst  intro.rst  usage.rst
doc/exa_statistics/: auditing.rst  index.rst  overview.rst  query_analytics.rst  system_health.rst
doc/examples/: index.rst
doc/examples/kafka-connector/: index.rst
doc/examples/sales_forecasting/: index.rst  setup.rst
doc/examples/sales_forecasting/sales_forecasting_demo/: create_slc.ipynb  create_udf.ipynb  export_store_data.ipynb  introduction.ipynb  main.ipynb
doc/gen_ai/: index.rst
doc/gen_ai/ai_text_summary/: index.rst
doc/gen_ai/data_steward_agent/: index.rst
exasol/developer_documentation/: __init__.py
main/: .buildinfo  data_ingestion.html  data_science.html  environments.html  examples.html  faq.html  getting_started.html  how_edit_this_docu.html  index.html  integrations.html  objects.inv  searchindex.js
main/.doctrees/: data_ingestion.doctree  data_science.doctree  environment.pickle  environments.doctree  examples.doctree  faq.doctree  getting_started.doctree  how_edit_this_docu.doctree  index.doctree  integrations.doctree
main/.doctrees/changes/: changelog.doctree  unreleased.doctree
main/.doctrees/distributed_python/: advanced.doctree  debugging.doctree  index.doctree  intro.doctree  usage.doctree
main/_sources/: environments.rst.txt  index.rst.txt  integrations.rst.txt
main/_sources/changes/: unreleased.md.txt
main/_sources/distributed_python/: debugging.rst.txt
main/changes/: changelog.html  unreleased.html
main/distributed_python/: advanced.html  debugging.html  index.html  intro.html  usage.html
test/unit/: unit_smoke_test.py
