[build-system]
requires = [
    "poetry>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "exasol-developer-documentation"
packages  = [
    {include = "exasol"},
]
version = "0.1.0"
description = "Documentation and resources for developing software and data science solutions and applications on top of the Exasol Analytics Engine."

license = "MIT"

authors = [
    "Torsten Kilias <torsten.kilias@exasol.com>"
]

readme = "README.md"

repository = "https://github.com/exasol/developer-documentation"
homepage = "https://github.com/exasol/developer-documentation"

keywords = ['exasol', 'developer_documentation']

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
exasol-toolbox = ">=0.12.0"

[tool.coverage.run]
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 5.0
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test.*",
]
ignore_errors = true
