[project]
name = "exasol-developer-documentation"
version = "0.1.0"
requires-python = ">=3.9,<4.0"
description = "Documentation and resources for developing software and data science solutions and applications on top of the Exasol Analytics Engine."
readme = "README.md"
authors = [
    {name="Torsten Kilias", email="torsten.kilias@exasol.com"}
]
license = "MIT"
keywords = ['exasol', 'developer_documentation']
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/exasol/developer-documentation"
homepage = "https://github.com/exasol/developer-documentation"

[build-system]
requires = [
    "poetry>=2.1.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages  = [
    {include = "exasol"},
]

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
exasol-toolbox = ">=1.6.0"

[tool.coverage.run]
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 0


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 4.0
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true
