[project]
name = "exasol-developer-documentation"
version = "0.1.0"
description = "Documentation and resources for developing software and data science solutions and applications on top of the Exasol Analytics Engine."
authors = [{ name = "Torsten Kilias", email = "torsten.kilias@exasol.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "exasol",
    "developer_documentation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/exasol/developer-documentation"
homepage = "https://github.com/exasol/developer-documentation"

[build-system]
requires = [
    "poetry>=2.3.0",
]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["exasol-toolbox>=6.1.1,<7"]

[tool.poetry]
requires-poetry = ">=2.1.0"
packages  = [
    {include = "exasol"},
]

[tool.coverage.run]
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 0


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.pylint.master]
fail-under = 4.0
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true
